# tenderec

./: .gitignore  AGENTS.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
backend/app/schemas/: classification.py
backend/app/services/: classification.py  matching.py
backend/mongo-seed/: company_profiles.json  feedbacks.json  organization_classifications.json  recommendations.json  seed-mongo.sh
backend/resources/organization_by_industry/: organizations_by_industry.json
backend/resources/tender/: tenders.json
backend/scripts/: classify_organizations.py  classify_tenders.py
backend/src/: config.py  constants.py  database.py
backend/src/classification/: constants.py  router.py  service.py
backend/src/companies/: company_constants.py  company_dependencies.py  company_exceptions.py  company_router.py  company_schemas.py  company_service.py  constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py
backend/src/feedback/: constants.py  feedback_dependencies.py  feedback_router.py  feedback_schemas.py  feedback_service.py  router.py  schemas.py  service.py
backend/src/llm/: langfuse_client.py  llm_service.py  service.py
backend/src/organization_classification/: classification_constants.py  classification_dependencies.py  classification_router.py  classification_schemas.py  classification_service.py  constants.py  router.py  (+2 more)
backend/tests/: conftest.py  test_companies.py  test_feedback.py  test_organization_classification.py  test_recommendations.py
(+65 files in other folders)
