[project]
name = "tenderec"
version = "0.1.0"
description = "Tenderec API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "langchain-openai>=0.3.0",
    "motor>=3.6.0",
    "pymongo>=4.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.34.0",
    "langchain>=1.2.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
